fixed height on mobile

--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ body {
   max-width: 1440px;
   width: 100%;
   height: 100vh;
+  height: -moz-available;
+  height: -webkit-fill-available;
+  height: fill-available;
   display: flex;
   justify-content: space-between;
   align-items: center;
